--- a/index.html
+++ b/index.html
@@ -63,14 +63,17 @@
         
         <section id="what-we-do" class="intro">
             <h2 class="section-title primary-border"> What We Do </h2>
+        <div class="flex-row">
         <p>
             butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
         </p>
+        </div>
         </section> 
 
         <section id="what-you-do" class="steps">
+           <div class="flex-row">
             <h2 class="section-title secondary-border">What you do</h2>
-        
+        </div>
             <div>
                 <img src="./assets/Images/step-1.svg" alt="">
                 <h3> Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -96,8 +99,10 @@
         </section>
 
         <section id="your-trainers" class="trainers">
+            <div class="flex-row">
             <h2 class="section-title primary-border">Meet the trainers</h2>
-           <!--First trainer bio-->
+        </div>
+            <!--First trainer bio-->
             <article class="trainer">
                 <img src="./assets/Images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
                 <div class="trainer-bio text-left">
@@ -134,7 +139,9 @@
         </section>
         <!--REACH OUT SECTION-->
         <section id="reach-out" class="contact">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3445.318065548559!2d-97.7469861848249!3d30.28500561412302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b57705ebae23%3A0x6420bca13547aab2!2s2111%20Rio%20Grande%20St%2C%20Austin%2C%20TX%2078705!5e0!3m2!1sen!2sus!4v1644094692495!5m2!1sen!2sus"
                 width="400" 
