Created Nested Flexboxes for What You Do section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="step">
                 <h3> Step 1. </h3>
             <div class="step-info">
-                <div class="step-image">
+                <div class="step-img">
                     <img src="./assets/Images/step-1.svg" alt="">
         </div>
         <div class="step-text">
@@ -96,7 +96,7 @@
             <div class="step">
                 <h3> Step 2. </h3>
             <div class="step-info">
-                <div class="step-image">
+                <div class="step-img">
                     <img src="./assets/Images/step-2.svg" alt=""/>
                 </div>
                     <div class="step-text">
@@ -109,7 +109,7 @@
             <div class="step">
                <h3> Step 3.</h3>
                <div class="step-info">
-                   <div class="step-image"> </div>
+                   <div class="step-img"> 
                    <img src="./assets/Images/step-3.svg" alt="">
                    </div>
                 <div class="step-text">
@@ -121,7 +121,7 @@
             <div class="step">
                 <h3>Step 4.</h3>
                 <div class="step-info">
-                    <div class="step-image">
+                    <div class="step-img">
                     <img src="./assets/Images/step-4.svg" alt="">
                 </div>
                 <div class="step-text">
