Made Runbudy Mobile friendly

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
      <div class="trainers">
             <!--First trainer bio-->
-            <article class="trainer right" id="article1">
+            <article class="trainer" id="article1">
                 <img src="./assets/Images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
                 <div class="trainer-bio">
                 <h3 class="trainer-name"> Arron Stephens</h3>
@@ -150,7 +150,7 @@
 
             </article>
             <!--second trainer bio-->
-            <article class="trainer right" id="article2">
+            <article class="trainer" id="article2">
                 <img src="./assets/Images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" /> 
                 <div class="trainer-bio">
                 <h3 class="trainer-name"> Joanna Gill</h3>
